# nao

.qi/: path.conf  worktree.xml
helloworld/build-sys-linux-x86_64/: CMakeCache.txt
prueba/: CMakeLists.txt  qiproject.xml
prueba/build-sys-linux-x86_64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
prueba/build-sys-linux-x86_64/sdk/: qitest.json
wbredball/: CMakeLists.txt  main.cpp  onredballdetection.cpp  onredballdetection.h  qiproject.xml
wbredball/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake
wbredball/build-remote/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
wbredball/build-sys-linux-x86_64/: CMakeCache.txt
